# projet-C25

./: CMakeLists.txt  README.md
docs/samples/: classes.csv  etudiants.csv  matiere_clas_asso.csv  matieres.csv  notes.csv
src/: CMakeLists.txt  main.c
src/affichage/: application.c  application.h
src/classe/: classe.c  classe.h  classe_matiere.c  classe_matiere.h
src/etudiant/: etudiant.c  etudiant.h
src/matiere/: matiere.c  matiere.h
src/note/: note.c  note.h
src/ui/: menu.c  menu.h
src/utils/: csv_utils.c  csv_utils.h  fn_helper.c  fn_helper.h  init.c  init.h
